--- a/css/home-sug.css
+++ b/css/home-sug.css
@@ -1,122 +1,150 @@
-.main{
-    width: 80%;
-    text-align: center;
-    margin: 0 auto;
-  }
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
 
-  .banner{
-    width: 100%;
-    text-align: center;
-    margin: 0;
-    justify-content: center;
-    background-color: #0C2739;
-  }
+*, *::before, *::after {
+  box-sizing: inherit;
+}
 
-  .cycle-slideshow img{
-    width: 100%;
-    text-align: center;
-    margin: 0;
-  }
+.main {
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
 
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: linear-gradient(135deg, #b4d556 0%, #99bc29 50%, #7ca01b 100%);
-  }
-  
-  .sugestoes {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    background-color: #0E2A3E;
-    margin: 2% auto;
-    width: 90%;
-    border-radius: 10px;
-    color: #FFFFFF;
-    padding: 2%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .sug {
-    flex: 1;
-    margin-right: 2%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .sug h1, .sug h2 {
-    font-size: 1.4rem;
-    color: #FFFFFF;
-    font-weight: 600;
-    margin-bottom: 1.5rem;
-  }
-  
-  .sug form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .sug input[type="text"], .sug input[type="email"], .sug textarea {
-    width: 80%;
-    max-width: 400px;
-    height: 50px;
-    color: #0C2739;
-    text-align: center;
-    border-radius: 10px;
-    margin-bottom: 1.5rem;
-    outline: none;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
-    font-size: 1rem;
-  }
-  
-  .sug .radio-group {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 1.5rem;
-  }
-  
-  .sug input[type="radio"] {
-    margin-right: 5px;
-  }
-  
-  .sug input[type="submit"] {
-    font-weight: bold;
-    width: 250px;
-    height: 50px;
-    color: #0C2739;
-    background-color: #FFFFFF;
-    border: none;
-    margin-top: 2%;
-    border-radius: 10px;
-    transition: background-color 0.3s ease;
-    font-size: 1rem;
-  }
-  
-  .sug input[type="submit"]:hover {
-    background-color: #99BC29;
-    cursor: pointer;
-  }
-  
-  .sug-av {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .sug-av img {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
-    object-fit: contain;
-    border-radius: 10px;
-  }  
+.banner {
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+}
+
+.cycle-slideshow-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+.cycle-slideshow {
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.cycle-slideshow img {
+  width: 100%;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(135deg, #b4d556 0%, #99bc29 50%, #7ca01b 100%);
+}
+
+.sugestoes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  background-color: #0E2A3E;
+  margin: 2% auto;
+  width: 90%;
+  border-radius: 10px;
+  color: #FFFFFF;
+  padding: 2%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.sug {
+  flex: 1;
+  margin-right: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sug h1, .sug h2 {
+  font-size: 1.4rem;
+  color: #FFFFFF;
+  font-weight: 600;
+  margin-bottom: 1.5rem;
+}
+
+.sug form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sug input[type="text"], .sug input[type="email"], .sug textarea {
+  width: 80%;
+  max-width: 400px;
+  height: 50px;
+  color: #0C2739;
+  text-align: center;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+  outline: none;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+  font-size: 1rem;
+}
+
+.sug .radio-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 1.5rem;
+}
+
+.sug input[type="radio"] {
+  margin-right: 5px;
+}
+
+.sug input[type="submit"] {
+  font-weight: bold;
+  width: 250px;
+  height: 50px;
+  color: #0C2739;
+  background-color: #FFFFFF;
+  border: none;
+  margin-top: 2%;
+  border-radius: 10px;
+  transition: background-color 0.3s ease;
+  font-size: 1rem;
+}
+
+.sug input[type="submit"]:hover {
+  background-color: #99BC29;
+  cursor: pointer;
+}
+
+.sug-av {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sug-av img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  border-radius: 10px;
+}  
